<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_1"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/question_1_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionOne" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionOne" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionOne" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionOne" />
                </RadioGroup>

                <TextView
                    android:id="@+id/question_2"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/question_2_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionTwo" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionTwo" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionTwo" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionTwo" />
                </RadioGroup>

                <TextView
                    android:id="@+id/question_3"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/question_3_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionThree" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionThree" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionThree" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionThree" />
                </RadioGroup>

                <TextView
                    android:id="@+id/question_4"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/question_4_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionFour" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionFour" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionFour" />

                    <RadioButton
                        style="@style/options_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioClickQuestionFour" />

                </RadioGroup>

                <TextView
                    android:id="@+id/question_5"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/question_5_checkbox_1"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestionFive" />

                <CheckBox
                    android:id="@+id/question_5_checkbox_2"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestionFive" />

                <CheckBox
                    android:id="@+id/question_5_checkbox_3"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestionFive" />

                <CheckBox
                    android:id="@+id/question_5_checkbox_4"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkQuestionFive" />

                <TextView
                    android:id="@+id/question_6"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/question_6_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer" />

                <TextView
                    android:id="@+id/question_7"
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/question_7_checkbox_1"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/question_7_checkbox_2"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/question_7_checkbox_3"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/question_7_checkbox_4"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/questions_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_prompt" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

                <TextView
                    android:id="@+id/quiz_summary"
                    style="@style/options_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="submit"
                    android:text="Submit" />

                <Button
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="sendEmail"
                    android:text="@string/email" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>